# autorace_kkk_ws

./: .gitignore  README.txt  build_log.txt  ssh.sh
src/autorace_control/: CMakeLists.txt  package.xml  readme.txt
src/autorace_control/config/: controller_lane_logic.yaml  controller_obstacle_dbscan_logic.yaml
src/autorace_control/include/: controller_lane_logic.hpp  controller_obstacle_dbscan_logic.hpp
src/autorace_control/scripts/: controller_from_center_wego.py  controller_pp_from_center_morai.py  motor_control_.py  motor_control_debugging.py  motor_control_kante.py  motor_control_old.py  waypoint_logger.py
src/autorace_control/src/: control_laba_1117.cpp  control_lane_1117.cpp  controller_from_center_wego_.cpp  controller_lane_logic.cpp  controller_obstacle_dbscan_logic.cpp  ego_path_recorder.cpp  mission_gate_control.cpp  motor_control_kante.cpp  pure_pursuit.cpp
src/autorace_decision/: CMakeLists.txt  README.MD  package.xml
src/autorace_decision/data/: ego_topic.csv
src/autorace_decision/launch/: ab_bag_play.launch  ab_bag_record.launch  mission_lane.launch
src/autorace_decision/src/: lidar_obstacle_avoid.cpp  main_node.cpp  mission_AB_left_toMain.cpp  mission_AB_right_toMain.cpp  mission_AB_toMain.cpp  mission_color_toMain.cpp  mission_crosswalk_toMain.cpp  mission_gate.cpp  mission_labacorn.cpp  mission_labacorn_check.cpp  mission_labacorn_toMain.cpp  mission_lane.cpp  mission_lane_check.cpp  mission_lane_toMain.cpp  mission_rotary_toMain.cpp  pp_from_csv_node.cpp
src/autorace_decision/src/mission_crosswalk/: crosswalk_detect.cpp  mission_crosswalk.cpp  stopline_ratio.cpp
src/autorace_decision/src/mission_gate/: gate_debug.cpp  gate_detect.cpp  lidar_preprocessing_gate.cpp  mission_gate.cpp  mission_gate_toMain.cpp
src/autorace_decision/src/mission_rotary/: clustering_visualization.hpp  lidar_preprocessing_rotary.cpp  mission_rotary.cpp  object_detect.hpp  rotary_main.cpp
src/autorace_perception/: CMakeLists.txt  package.xml
src/autorace_perception/config/: cam_calibration.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  ost.yaml  teb_local_planner_params.yaml
src/autorace_perception/include/lane_detection/: feature_extraction.hpp  preprocessing.hpp  sliding_window.hpp
src/autorace_perception/launch/: camera_calibration.launch  local_teb_planner.launch  parking_mission.launch  parking_teb_local.launch  sensors_all.launch  sensors_camera.launch  sensors_lidar.launch
src/autorace_perception/msg/: GateCluster.msg
src/autorace_perception/scripts/lane_detectionpyt/: lane_kante.py  lane_kante_ver2.py
src/autorace_perception/scripts/marker_detectionpyt/: marker_detection.py
src/autorace_perception/src/: cluster_detect_lidar.cpp  dbscan_gate.cpp  debugging_yolo.py  lane_jun_wego.cpp  lane_kante_wego.cpp
src/autorace_perception/src/camera/: crosswalk_node.cpp  crosswalk_node.py  lane_center_node.py  lane_color_node.cpp  lane_kante_wego.cpp  yolo_AB_sign_node.py
src/autorace_perception/src/lane_detect/: lane_detectpyt.py
src/autorace_perception/src/lane_detection/: CMakeLists.txt  package.xml
src/autorace_perception/src/lidar/: cluster_detect_lidar.cpp  rotary_detect_lidar.cpp
src/autorace_perception/src/parking_lot/: cmd_to_webot.py  goal_pose_pub.py  lidar_odom.py  lidar_preprocessing.py  parking_lot_detection.py  parking_mission.py
src/autorace_perception/src/parking_sign/: parking_sign_detect.py
src/autorace_perception/src/rotary_mission/: clustering_visualization.hpp  clustering_visualization.py  lidar_preprocessing.py  object_tracking.cpp  object_tracking.py  obstacle_detect.hpp  obstacle_detect.py
src/autorace_perception/src/sensor_camera/: calibrate_fisheye.py  camera_birdview.cpp  feature_extraction.py  per_camera.py  per_camera_rotary.py  preprocessing.py  preview_undistort_fisheye.py  save_images_fisheye.py  sliding_window.py
src/autorace_perception/src/sensor_lidar/: lidar_obstacle_detect.cpp
src/control/: CMakeLists.txt
src/control/src/: control_AB_1117.cpp  controller_lane_logic.cpp
src/decision_node/: CMakeLists.txt  package.xml
src/decision_node/src/: hard_node.py  main_node.cpp  main_node_pyt.py  mission_bag_play.cpp  mission_node.cpp  mission_node_pyt.py
src/decision_node/src/mission_ab/: ab_left_debug.cpp  mission_ab_left.cpp  mission_ab_right.cpp
src/decision_node/src/mission_bagfiles/: go_ab_left.bag  go_ab_right.bag  rotary_mission.bag
src/decision_node/src/mission_crosswalk/: crosswalk_debug.cpp  mission_crosswalk.cpp
src/decision_node/src/mission_gate/: mission_gate.cpp
src/decision_node/src/mission_labacorn/: labacorn_debug.cpp  mission_labacorn.cpp
src/decision_node/src/mission_lane/: mission_lane.cpp
src/decision_node/src/mission_parking/: mission_parking.cpp  parking_debug.cpp
src/jiwon_mission/: CMakeLists.txt  README.txt  package.xml
src/jiwon_mission/launch/: gate.launch  leftright.launch  stopline_ratio.launch  stopline_ratio_imagetest.launch
src/jiwon_mission/scripts/: bev_binary.py  yolo_debug_cam.py  yolo_debug_cam_kante.py  yolo_debugging.py
src/jiwon_mission/src/: bev_binary.cpp  gate.cpp  leftright.cpp  leftright_imagetest.cpp  lidar_cluster.cpp  lidar_rubber.cpp  mission_ab.cpp  mission_ab_control  mission_ab_control.cpp  mission_ab_toMain.cpp  mission_ab_tomain.cpp  stopline_contour.cpp  stopline_ratio_imagetest.cpp
src/robot_bringup/: CMakeLists.txt  README.md  package.xml
src/robot_bringup/config/: ekf_wheel_imu.yaml  parking.rviz  robot.urdf  sensors.rviz  wheel_ekf.yaml  wheel_odom.yaml
src/robot_bringup/launch/: bringup.launch  camera_bringup.launch  gmapping.launch  jostick.launch  joystick.launch  mapping.launch  robot_state_publisher.launch  start.launch  wheel_ekf.launch  wheel_odom.launch
src/robot_bringup/scripts/: joystick.py  wheel_odom_node.py
src/robot_bringup/src/: com_from_imu_node.cpp  odom_tf_broadcaster.cpp
src/robot_bringup/urdf/: kkk.xacro  robot.urdf.xacro
src/stopline/: CMakeLists.txt  package.xml
src/stopline/launch/: stopline_ratio.launch
src/stopline/src/: bev_binary.cpp
(+91 files in other folders)
