<?xml version="1.0"?>
<package format="2">
  <name>lane_detection</name>
  <version>0.0.1</version>
  <description>Lane detection pipeline ported from Python to C++ (yellow lanes only).</description>

  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>

  <export/>
</package>
